--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-<nav class="navbar navbar-default affix-top" data-spy="affix" data-offset-top="200">
+<nav class="navbar navbar-inverse affix-top" data-spy="affix" data-offset-top="197">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -45,7 +45,7 @@
 
         <div class="collapse navbar-collapse" id="myNavBar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#section1">Part 1 <span class="sr-only">(current)</span></a></li>
+                <li><a href="#section1">Part 1</a></li>
                 <li><a href="#section2">Part 2</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
